# missionaries_and_cannibals

./: .gitignore  CMakeLists.txt  README.md
src/: Action.cpp  Action.hpp  Main  Main.cpp  Node.cpp  Node.hpp  Problem.cpp  Problem.hpp  State.cpp  State.hpp
